Fix incorrect line breaks in uses/used by descriptions (#191)
* Remove display: block to fix wrong line breaks

* Add correct line breaks to data in the first column

--- a/source/wp-content/themes/wporg-developer-2023/src/code-table/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/code-table/style.scss
@@ -23,13 +23,18 @@
 		}
 
 		td a {
-			display: block;
 			text-decoration: underline;
 			word-break: break-all;
 		}
 
+		tr td:first-child {
+			a,
+			code {
+				display: block;
+			}
+		}
+
 		code {
-			display: block;
 			color: var(--wp--preset--color--charcoal-4);
 			word-break: break-all;
 		}
